--- a/back-end/package.json
+++ b/back-end/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
